applications/harbor/10_harbor_namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
  labels:
    istio.io/dataplane-mode: none
    istio-injection: disabled
    kubernetes.io/metadata.name: ${NAMESPACE}
    monitoring: enabled
spec:
  finalizers:
    - kubernetes
---
