applications/harbor/50_harbor_peer.yaml
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: harbor-metrics
  namespace: ${NAMESPACE}
spec:
  mtls:
    mode: PERMISSIVE
---
