applications/harbor/50_harbor_peer_auth.yaml
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: harbor-peer-auth
  namespace: harbor # Passe den Namespace an, falls Harbor woanders läuft
spec:
  mtls:
    mode: PERMISSIVE
---
